add support Simplified Chinese Language

--- a/frame/app/src/main/res/layout/sidebar.xml
+++ b/frame/app/src/main/res/layout/sidebar.xml
@@ -6,24 +6,28 @@
     android:layout_height="match_parent"
     android:background="@drawable/alpha_black"
     android:orientation="vertical">
+
     <LinearLayout
         android:id="@+id/nav_apps"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:gravity="top"
         android:orientation="vertical">
+
         <ImageView
             android:id="@+id/nav_icon_settings"
             android:layout_height="wrap_content"
             android:layout_width="60dp"
             android:layout_gravity="center"
-            android:src="@drawable/icon_settings" />
+            android:src="@drawable/icon_settings"/>
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/sidebarIndicators"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:orientation="vertical">
+
         <LinearLayout
             android:layout_height="0dp"
             android:layout_width="75dp"
@@ -31,13 +35,15 @@
             android:layout_marginTop="5dp"
             android:layout_weight="1"
             android:orientation="vertical">
+
             <ImageView
                 android:id="@+id/indicator_network_signal"
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_weight="1"
-                android:src="@drawable/ic_network_0" />
+                android:src="@drawable/ic_network_0"/>
+
             <LinearLayout
                 android:layout_width="79dp"
                 android:layout_height="39dp"
@@ -46,6 +52,7 @@
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:paddingTop="8dp">
+
                 <TextView
                     android:id="@+id/network_type"
                     android:layout_width="wrap_content"
@@ -54,16 +61,18 @@
                     android:text=""
                     android:textAlignment="center"
                     android:textColor="#ffffff"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"/>
+
                 <ImageView
                     android:id="@+id/indicator_battery_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="14dp"
                     android:adjustViewBounds="true"
-                    android:src="@drawable/indicator_battery_50" />
+                    android:src="@drawable/indicator_battery_50"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/sidebarMetrics"
         android:layout_width="fill_parent"
@@ -73,17 +82,20 @@
         android:layout_weight="1"
         android:orientation="vertical"
         android:gravity="center_vertical">
+
         <RelativeLayout
             android:id="@+id/sidebarMetricStorageBorder"
             android:layout_width="match_parent"
             android:layout_height="52dp"
             android:background="@drawable/border_white"
             android:gravity="center_vertical">
+
             <ImageView
                 android:id="@+id/sidebarMetricStorageEdge"
                 android:layout_width="6dp"
                 android:layout_height="fill_parent"
-                android:src="@drawable/edge_white_left" />
+                android:src="@drawable/edge_white_left"/>
+
             <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
@@ -91,6 +103,7 @@
                 android:layout_weight="1"
                 android:orientation="horizontal"
                 android:gravity="center_vertical">
+
                 <TextView
                     android:id="@+id/sidebarMetricStorageValue"
                     android:layout_width="match_parent"
@@ -98,17 +111,19 @@
                     android:text="56%"
                     android:textColor="#ffffff"
                     android:textStyle="bold"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"/>
+
                 <TextView
                     android:id="@+id/sidebarMetricStorageLabel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="26dp"
-                    android:text="STORAGE"
+                    android:text="存储空间"
                     android:textColor="#ffffff"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"/>
             </RelativeLayout>
         </RelativeLayout>
+
         <RelativeLayout
             android:id="@+id/sidebarMetricTempBorder"
             android:layout_width="match_parent"
@@ -116,11 +131,13 @@
             android:background="@drawable/border_white"
             android:layout_marginTop="8dp"
             android:gravity="center_vertical">
+
             <ImageView
                 android:id="@+id/sidebarMetricTempEdge"
                 android:layout_width="6dp"
                 android:layout_height="fill_parent"
-                android:src="@drawable/edge_white_left" />
+                android:src="@drawable/edge_white_left"/>
+
             <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
@@ -128,6 +145,7 @@
                 android:layout_weight="1"
                 android:orientation="horizontal"
                 android:gravity="center_vertical">
+
                 <TextView
                     android:id="@+id/sidebarMetricTempValue"
                     android:layout_width="match_parent"
@@ -135,17 +153,19 @@
                     android:text="114 F"
                     android:textColor="#ffffff"
                     android:textStyle="bold"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"/>
+
                 <TextView
                     android:id="@+id/sidebarMetricTempLabel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="EON TEMP"
+                    android:text="温度"
                     android:textColor="#ffffff"
                     android:layout_marginTop="26dp"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"/>
             </RelativeLayout>
         </RelativeLayout>
+
         <LinearLayout
             android:id="@+id/sidebarMetricPandaBorder"
             android:layout_width="match_parent"
@@ -153,11 +173,13 @@
             android:background="@drawable/border_white"
             android:layout_marginTop="8dp"
             android:gravity="center_vertical">
+
             <ImageView
                 android:id="@+id/sidebarMetricPandaEdge"
                 android:layout_width="6dp"
                 android:layout_height="fill_parent"
-                android:src="@drawable/edge_white_left" />
+                android:src="@drawable/edge_white_left"/>
+
             <TextView
                 android:id="@+id/sidebarMetricPandaValue"
                 android:layout_width="match_parent"
@@ -166,19 +188,21 @@
                 android:minHeight="32dp"
                 android:paddingTop="4dp"
                 android:paddingBottom="4dp"
-                android:text="NO PANDA"
+                android:text="无CAN设备"
                 android:textAlignment="center"
                 android:textColor="#ffffff"
                 android:textStyle="bold"
-                android:textSize="12sp" />
+                android:textSize="12sp"/>
         </LinearLayout>
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/nav_home"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:orientation="vertical">
+
         <ImageView
             android:id="@+id/nav_icon_home"
             android:layout_width="60dp"
@@ -186,6 +210,6 @@
             android:layout_gravity="center"
             android:layout_marginBottom="15dp"
             android:alpha="0.65"
-            android:src="@drawable/icon_comma" />
+            android:src="@drawable/icon_comma"/>
     </LinearLayout>
 </LinearLayout>
