--- a/frame/app/src/main/res/layout/sidebar.xml
+++ b/frame/app/src/main/res/layout/sidebar.xml
@@ -74,6 +74,28 @@
         android:orientation="vertical"
         android:gravity="center_vertical">
         <RelativeLayout
+                android:id="@+id/sidebarMetricIPBorder"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:gravity="center_vertical">
+            <RelativeLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical">
+                <TextView
+                        android:id="@+id/sidebarMetricIPValue"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="0dp"
+                        android:text="255.255.255.255"
+                        android:textColor="#ffffff"
+                        android:textSize="9sp" />
+            </RelativeLayout>
+        </RelativeLayout>
+        <RelativeLayout
             android:id="@+id/sidebarMetricStorageBorder"
             android:layout_width="match_parent"
             android:layout_height="52dp"
