--- a/frame/app/src/main/res/layout/sidebar.xml
+++ b/frame/app/src/main/res/layout/sidebar.xml
@@ -136,7 +136,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="26dp"
-                    android:text="STORAGE"
+                    android:text="@string/storage"
                     android:textColor="#ffffff"
                     android:textSize="12sp" />
             </RelativeLayout>
@@ -172,7 +172,7 @@
                     android:id="@+id/sidebarMetricTempLabel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="EON TEMP"
+                    android:text="@string/eon_temp"
                     android:textColor="#ffffff"
                     android:layout_marginTop="26dp"
                     android:textSize="12sp" />
@@ -198,7 +198,7 @@
                 android:minHeight="32dp"
                 android:paddingTop="4dp"
                 android:paddingBottom="4dp"
-                android:text="NO PANDA"
+                android:text="@string/no_panda"
                 android:textAlignment="center"
                 android:textColor="#ffffff"
                 android:textStyle="bold"
