--- a/frame/app/src/main/res/layout/sidebar.xml
+++ b/frame/app/src/main/res/layout/sidebar.xml
@@ -50,33 +50,33 @@
                     android:id="@+id/network_type"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
+                    android:layout_marginRight="3dp"
                     android:text=""
                     android:textAlignment="center"
                     android:textColor="#ffffff"
-                    android:textSize="9sp" />
-                <ImageView
-                    android:id="@+id/indicator_battery_icon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="14dp"
-                    android:layout_marginRight="5dp"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/indicator_battery_50" />
+                    android:textSize="8sp" />
+                <!--<ImageView-->
+                    <!--android:id="@+id/indicator_battery_icon"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="14dp"-->
+                    <!--android:layout_marginRight="5dp"-->
+                    <!--android:adjustViewBounds="true"-->
+                    <!--android:src="@drawable/indicator_battery_50" />-->
                 <TextView
                     android:id="@+id/battery_percentage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
-                    android:text=""
+                    android:layout_marginRight="3dp"
+                    android:text="100%"
                     android:textAlignment="center"
                     android:textColor="#ffffff"
-                    android:textSize="9sp" />
+                    android:textSize="13sp" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
         android:id="@+id/sidebarMetrics"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
@@ -86,7 +86,7 @@
         <RelativeLayout
                 android:id="@+id/sidebarMetricIPBorder"
                 android:layout_width="match_parent"
-                android:layout_height="20dp"
+                android:layout_height="14dp"
                 android:gravity="center_vertical">
             <RelativeLayout
                     android:layout_width="fill_parent"
@@ -102,6 +102,7 @@
                         android:layout_marginTop="0dp"
                         android:text="255.255.255.255"
                         android:textColor="#ffffff"
+                        android:textAlignment="center"
                         android:textSize="9sp" />
             </RelativeLayout>
         </RelativeLayout>
@@ -216,7 +217,7 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_gravity="center"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="5dp"
             android:alpha="0.65"
             android:src="@drawable/icon_comma" />
     </LinearLayout>
